# SpiderTrace

./: .gitignore  README.md  arch_diagram.tex  data_npz.py  evaluate_mwpm.py  evaluate_mwpm_circuit.py  generate_dataset.py  gnn_models.py  plot_result.py  pyproject.toml  qec_zx_dataset.py  train.py  validate_dem_graph.py  verify_dataset.py
data/: d3_p0.0010.npz  d3_p0.0050.npz  d3_p0.0100.npz  d3_p0.0300.npz  d3_p0.0500.npz  d3_p0.1000.npz  d5_p0.0010.npz  d5_p0.0050.npz  d5_p0.0100.npz  d5_p0.0300.npz  d5_p0.0500.npz  d5_p0.1000.npz
results/: d3_mwpm.json  d3_results.json  d5_mwpm.json  d5_results.json  d7_mwpm.json  d7_results.json  d7_results_20k.json  dem_graph_gnnA_d5_p0.003.json  gnn_d3_p0.01.json  gnn_d5_p0.003.json  gnn_d5_p0.003_bugged_posweight.json  mwpm_circuit_level.json
spidertrace/: __init__.py  circuit.py  display_all_zx.py  engine.py  error.py  zx_visual.py
tests/: test_custom.py  test_cz.py  test_engine.py  test_simple.py  test_zx_visual.py
